# dzta

./: Cargo.toml  README.md  configtx.yaml  connection-profile.sh  create-connect.sh  orderermsp.yaml  orderermspsign.yaml  org1.yaml  org1msp-tlsca.yaml  org1msp.yaml  org2.yaml  org2msp-tlsca.yaml  org2msp.yaml  peer-org1.yaml  peer-org2.yaml  witness_input.json
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/androidTest/java/com/example/dzta/: ExampleInstrumentedTest.kt
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/example/dzta/: MainActivity.kt  zkpvmrunner.kt
android-app/app/src/main/java/com/example/dzta/ui/theme/: Color.kt  Theme.kt  Type.kt
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/app/src/test/java/com/example/dzta/: ExampleUnitTest.kt
android-app/gradle/wrapper/: gradle-wrapper.properties
config/: connection-profile.yaml  connection-proile1.yaml
config/certs/cas/: adim-key.key  admin-cert.crt  admin-key.key  admin-key.key.bak  org1-ca-tls.crt
config/certs/orderers/: tls-ca.crt
config/certs/peers/: org1-peer0-tls-ca.crt  org1-peer1-tls-ca.crt  org1-peer1-tonic-tls-ca.crt  org1-peer2-tls-ca.crt
dzta-protected-prover/: Cargo.toml
dzta-protected-prover/src/: main.rs
dztac/: Dockerfile_hold  build_and_package.sh  chaincode.tgz  connection.json  metadata.json
src/: config.rs  credential_manager.rs  errors.rs  fabric_client.rs  hold.rs  hold1.rs  hold_config.rs  lib.rs  main.rs  models.rs  tee_runner.rs  witness_generator.rs  zkp_core.rs
tee-runner-enclave/: Cargo.toml
tee-runner-enclave/src/: main.rs
test/: intergration.rs
tests/: e2e_credential_lifecycle.rs
zkp-core-crypto/: Cargo.toml
zkp-core-crypto/src/: lib.rs
