[package]
name = "dzta"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "zkp-core-crypto",
    "tee-runner-enclave",
    "dzta-protected-prover",
]
resolver = "2"

[dependencies]

# Fabric SDK
fabric-sdk = { version = "0.5.8" }
tonic = "0.14.6"
tonic-build = "0.14.6"
prost = "0.14.4"

# VCX & Askar
# aries_vcx = { path = "/home/daredevil/Development/Dev/dZTA/vcx-main/aries/aries_vcx/", default-features = false, features = ["askar_wallet"] }
aries-askar = "0.4.6"

# Cryptography
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
async-trait = "0.1.77"
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
log = "0.4.33"
env_logger = "0.11.11"
anyhow = "1.0.103"
thiserror = "2.0.18"
num-bigint = "0.4.3"
num-traits = "0.2.15"
ark-groth16 = { version = "0.6", default-features = false}
ark-bls12-381 = { version = "0.6", default-features = false, features = ["curve"] }
ark-snark = { version = "0.6", default-features = false }
ark-serialize = { version = "0.6", default-features = false}
# Utilities
chrono = "0.4"
base64 = "0.22.1"
hex = "0.4"
openssl = "0.10"
sha2 = "0.11.0"



[patch.crates-io]


[dev-dependencies]
tokio-test = "0.4"